samples/_failures_safe/1761713247_7d006c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8001c3ac.c: In function ‘main’:
./samples/SAFE/__tmp_8001c3ac.c:124:5: error: expected expression at end of input
  124 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_8001c3ac.c:124:5: error: expected declaration or statement at end of input
